# intelligent-spellbook

./: Cargo.toml
intspell-backend/: Cargo.toml
intspell-backend/src/: main.rs
intspell-backend/src/routes/: mod.rs  spell_generate.rs
intspell-frontend/: Cargo.toml  index.css  index.html
intspell-frontend/src/: app.rs  macros.rs  main.rs
