[package]
name = "intspell-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1" }
tokio = { version = "1.21.2", features=["full"] }
anyhow = { version = "1.0.68" }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.4.0" }
async-trait = { version = "0.1.58" }
tower-http = { version = "0.3.4", features=["cors"] }
reqwest = { version = "0.11.13" }
